--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #101010;
+    background-color: #181818;
     padding: 0;
     margin: 0;
     min-height: 100vh;
@@ -12,28 +12,48 @@ header {
 
 header h2 {
     display: inline-block;
-    margin: 0;
-    padding-top: 10px;
-    color: black;
+    margin: 10px 0;
+    color: 	#56208a;
+    font-size: 28px;
 }
 
 nav {
     float: right;
 }
 
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1000px;
-    min-width: 350px;
+nav a {
+    color: #56208a;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    padding: 0;
+    margin-top: 15px;
+    width: 98.6px;
+    border-right: solid #cccccc .2px;
+    font-size: 17px;
+    font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
 }
 
-header .container {
-    height: 100%;
+nav a:first-child {
+    width: 80.6px;
 }
 
-#about-slim {
-    margin-top: 100px;
+nav a:last-child {
+    width: 76.6px;
+    text-align: right;
+    border: none;
+    padding-right: 0;
+}
+
+nav a:hover {
+    font-weight: bold;
+    color: #56208a;
+    text-decoration: none;
+}
+
+#about {
+    margin-top: 60px;
+    position: relative;
 }
 
 #profile-pic {
@@ -41,14 +61,13 @@ header .container {
     width: 179px;
     position: absolute;
     left: 0;
-    top: -20px;
+    top: -25px;
     border: 1px solid #4f84c4;
     border-radius: 20px;
 }
 
 #about-header {
     display: inline-block;
-    height: 100px;
     background-color: #4f84c4;
     width: 100%;
     position: relative;
@@ -56,6 +75,124 @@ header .container {
 }
 
 #main-heading {
-    padding: 10px 5px 0 189px;
+    padding: 10px 5px 10px 189px;
     margin: 0;
+    font-size: 30px;
+    color: black;
+}
+
+#about-basic {
+    height: 252px;
+    width: 90%;
+    margin-left: 5%;
+    background-color: #56208a;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    position: relative;
+    z-index: -1;
+    padding: 0 15px;
+    overflow: hidden;
+}
+
+h2.about {
+    margin: 0;
+    text-align: center;
+    color: whitesmoke;
+    padding: 15px 0 10px;
+    text-decoration: underline;
+}
+
+p.about {
+    font-size: 16px;
+    color: white;
+}
+
+span.placeholder {
+    padding-left: calc(164px - 5px/3 - 50%/9);
+}
+
+span.end-placeholder {
+    padding-right: 104px;
+}
+
+#toggle-about-basic {
+    position: absolute;
+    bottom: -4px;
+    right: calc(5% - 4px);
+    padding: 5px 10px;
+    border-radius: 10px;
+    background-color: #4f84c4;
+    z-index: 2;
+}
+
+#toggle-about-basic:focus {
+    outline: none;
+}
+
+/* ANIMATIONS */
+
+/* open/close animation for about section */
+@keyframes open {
+    from {height: 276px;}
+    to {height: 543.4px;}
+}
+
+@keyframes close {
+    from {height: 543.4px;}
+    to {height: 276px;}
+}
+
+/* Flip arrow animation for about open/close button */
+/* --- Source: https://stackoverflow.com/questions/5406368/can-you-use-css-to-mirror-flip-text (user: Duopixel) */
+@keyframes flip-up {
+    from {
+        -moz-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1);
+        -o-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+    to {
+        -moz-transform: scale(1, -1);
+        -webkit-transform: scale(1, -1);
+        -o-transform: scale(1, -1);
+        -ms-transform: scale(1, -1);
+        transform: scale(1, -1);        
+    }
+}
+
+@keyframes flip-down {
+    from {
+        -moz-transform: scale(1, -1);
+        -webkit-transform: scale(1, -1);
+        -o-transform: scale(1, -1);
+        -ms-transform: scale(1, -1);
+        transform: scale(1, -1);   
+    }
+    to {
+        -moz-transform: scale(1, 1);
+        -webkit-transform: scale(1, 1);
+        -o-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        transform: scale(1, 1);
+    }
+}
+
+/* Fade in/out animation */
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;      
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;  
+    }
+    to {
+        opacity: 0;
+    }
 }
