--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header hr {
     margin: 0;
 }
 
-nav {
+header nav {
     float: right;
 }
 
@@ -40,22 +40,9 @@ nav a {
     display: inline-block;
     text-align: center;
     padding: 0;
-    margin-top: 15px;
     width: 98.6px;
-    border-right: solid white .2px;
     font-size: 17px;
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-}
-
-nav a:first-child {
-    width: 80.6px;
-}
-
-nav a:last-child {
-    width: 76.6px;
-    text-align: right;
-    border: none;
-    padding-right: 0;
 }
 
 nav a:hover {
@@ -63,7 +50,106 @@ nav a:hover {
     color: #56208a;
 }
 
-/* ABOUT ----------------------------------------*/
+header nav a {
+    margin-top: 15px;
+    border-right: solid white .2px;
+}
+
+header nav a:first-child {
+    width: 80.6px;
+}
+
+header nav a:last-child {
+    width: 76.6px;
+    text-align: right;
+    border: none;
+    padding-right: 0;
+}
+
+/* SIDE NAV MENU --------------------------------*/
+
+#side-nav-menu {
+    position: fixed;
+    left: 2px;
+    top: 10px;
+    z-index: 2;
+}
+
+#side-nav-menu[state="hide"] {
+    display: none;
+}
+
+#side-nav-menu[state="show"] {
+    display: block;
+}
+
+button#side-nav-toggle {
+    height: 30px;
+    width: 30px;
+    border: none;
+    padding: 0;
+    box-shadow: 0 0 6px #202020;
+    position: relative;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #eaeaea;
+    z-index: 2;
+}
+
+button#side-nav-toggle:hover {
+    background-color: #f3f3f3;
+}
+
+button#side-nav-toggle:active {
+    box-shadow: 0px 0px .5px #202020;
+}
+
+button#side-nav-toggle:active,
+button#side-nav-toggle:focus {
+    outline: none;
+    /* border: none; */
+}
+
+button#side-nav-toggle > i.fa-compass {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 26px;
+    width: 26px;
+    font-size: 26px;
+    color: #56208a;
+}
+
+#side-nav-menu > nav {
+    background-color: #eaeaea;
+    border-radius: 4px;
+    border: solid #555555 1px;
+    box-shadow: 1.5px 3px 6px #525252;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    overflow: hidden;
+}
+
+#side-nav-menu > nav[state="closed"] {
+    height: 0;
+    width: 0;
+}
+
+#side-nav-menu > nav[state="open"] {
+    height: 127px;
+    width: 98.594px;
+}
+
+#side-nav-menu > nav a {
+    padding: 3px 0;
+}
+
+#side-nav-menu > nav a:not(:last-of-type) {
+    border-bottom: 1px solid whitesmoke;
+}
+
+/* ABOUT ---------------------------------------------*/
 
 #about {
     position: relative;
@@ -389,6 +475,29 @@ ul a:hover {
     to { height: 252px; }
 }
 
+/* open/close side nav menu */
+@keyframes open-side {
+    from {
+        height: 0;
+        width: 0;
+    }
+    to {
+        height: 127px;
+        width: 98.594px;
+    }
+}
+
+@keyframes close-side {
+    from {
+        height: 127px;
+        width: 98.594px;
+    }
+    to {
+        height: 0;
+        width: 0;
+    }
+}
+
 /* Flip arrow animation for about open/close button */
 /* -- Source: https://stackoverflow.com/questions/5406368/can-you-use-css-to-mirror-flip-text (user: Duopixel) */
 @keyframes flip-up {
@@ -556,7 +665,7 @@ ul a:hover {
         display: block;
     }
     
-    nav {
+    header nav {
         float: none;
     }
 }
@@ -630,7 +739,7 @@ ul a:hover {
         display: block;
     }
 
-    nav {
+    header nav {
         float: none;
     }
 
@@ -689,6 +798,19 @@ ul a:hover {
         width: 330px;
         padding: 0;
     }
+
+    button#side-nav-toggle {
+        height: 20px;
+        width: 20px;
+    }
+    
+    button#side-nav-toggle > i.fa-compass {
+        top: 1px;
+        left: 1px;
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+    }    
 
     #projects {
         margin-left: 0;
