--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,20 +88,20 @@ button#side-nav-toggle {
     width: 30px;
     border: none;
     padding: 0;
-    box-shadow: 0 0 6px #202020;
+    box-shadow: 0 0 6px black;
     position: relative;
     cursor: pointer;
     border-radius: 50%;
-    background-color: #eaeaea;
+    background-color: white;
     z-index: 2;
 }
 
 button#side-nav-toggle:hover {
-    background-color: #f3f3f3;
+    background-color: #eaeaea;
 }
 
 button#side-nav-toggle:active {
-    box-shadow: 0px 0px .5px #202020;
+    box-shadow: 0px 0px .5px black;
 }
 
 button#side-nav-toggle:active,
