--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,14 +391,14 @@ ul a:hover {
 /* CONTACT ----------------------------------------*/
 
 #contact {
-    margin: 30px 0;
+    margin: 30px 0 0;
     padding-top: 10px;
 }
 
 #contact-main {
     background-color: #e0e0e0;
     border-radius: 10px;
-    margin: 0 20px 20px;
+    margin: 0 20px 0;
     padding: 0 20px 20px;
     text-align: center;
     box-shadow: 3px 6px 3px #525252;
@@ -460,6 +460,31 @@ ul a:hover {
     animation: text-heartbeat 500ms infinite;
 }
 
+/* FOOTER */
+
+body > footer {
+    height: 40px;
+    margin-top: 40px;
+    background-color: #aaaaaa;
+    box-shadow: inset 0px 4px 3px #666666;
+    padding: 10px 20px 0 0;
+    text-align: right;
+}
+
+body > footer > a {
+    color: #1e1e1e;
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+}
+
+body > footer > a:hover {
+    color: #040404;
+    font-weight: 500;
+}
+
+/* ------------------------------------------------------------------ */
 /* ANIMATIONS ----------------------------------------*/
 
 /* open/close animation for about section */
