changed picture, fixed typo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* Organization of this file:
     1st: All styles except animations and breakpoints
-        * These are grouped by html document sections from top to bottom of page.
+        * These are grouped by html document sections
+            from top to bottom of page.
     2nd: Animations
     3rd: Breakpoints
 */
