--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,6 +375,10 @@ ul a:hover {
     box-shadow: 1.5px 3px 1.5px #525252;
 }
 
+.btn-group.twobtns > .btn {
+    line-height: 3;
+} 
+
 .btn-group > .btn:focus {
     border: 2px solid #6c757d;
     box-shadow: none;
